<?xml version="1.0"?>
<package>
  <name>beginner_tutorials</name>
  <version>0.0.0</version>
  <description>The beginner_tutorials package is created by lihux @2014.06.19</description>

  <maintainer email="lihui.zl@163.com">lihux</maintainer>


  <license>BSD</license>
  <url type="website">https://github.com/lihux/lihuxLearningROS/network</url>

  <author email="lihui.zl@163.com">lihux</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>orscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>orscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>
  </export>
</package>
